samples/_failures_safe/1761153293_472f83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8f5b7e9.c: In function ‘main’:
./samples/SAFE/__tmp_e8f5b7e9.c:169:13: error: expected declaration or statement at end of input
  169 |             }
      |             ^
./samples/SAFE/__tmp_e8f5b7e9.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e8f5b7e9.c:169:13: error: expected declaration or statement at end of input
